--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -39,6 +39,8 @@ windowrule = float, confirmreset
 #windowrulev2 = opacity 0.90 0.90,class:^(steam)$
 #windowrulev2 = opacity 0.90 0.90,class:^(steamwebhelper)$
 windowrulev2 = opacity 0.90 0.90,class:^(Spotify)$
+windowrulev2 = opacity 0.90 0.90,class:^(rofi)$
+layerrule = blur,rofi
 #windowrulev2 = opacity 0.90 0.90,class:^(Code)$
 #windowrulev2 = opacity 0.90 0.90,class:^(code-url-handler)$
 windowrulev2 = opacity 0.90 0.90,class:^(kitty)$
@@ -109,7 +111,6 @@ workspace=6,persistent,true
 workspace=7,persistent,true
 workspace=8,persistent,true
 workspace=9,persistent,true
-#layerrule = blur,rofi
 #layerrule = ignorezero,rofi
 #layerrule = blur,notifications
 #layerrule = ignorezero,notifications
