--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -10,10 +10,12 @@ bind = CTRL ALT, Delete, exit,
 bind = $mainMod, F, fullscreen
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, R, togglesplit, # dwindle
 bind = $mainMod, H, exec, hyprpicker --autocopy
-bind = ALT, TAB, exec, rofi -show window
-bind = $mainMod, L, exec, swaylock --screenshots --clock --indicator --indicator-radius 100 --indicator-thickness 7 --effect-blur 7x5 --effect-vignette 0.5:0.5 --ring-color ffffff --key-hl-color 00ccff --line-color 00000000 --inside-color 00000088 --separator-color 00000000 --text-color ffffff --ignore-empty-password --indicator-caps-lock 
+bind = ALT, TAB, exec, $tab
+bind = $mainMod, L, exec, $swaylock-hyprland-screenshots
+bind = ,Print, exec, grim -g "$(slurp)" - | swappy -f - -o -
+bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f - -o -
 
 # Lauchers
 bind = $mainMod, Space, exec, $menu
@@ -21,18 +23,15 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, exec, $editor
-bind=,Print,exec, grim
-bind = $mainMod, print, exec, flameshot gui
+bind = $mainMod, J, exec, rofimoji -f all -a copy --selector-args="-theme ~/.config/rofi/emoj.rasi"
 
-bind = $mainMod, J, exec, rofimoji -a copy -f all
-bind = $mainMod SHIFT, J, exec, rofimoji -a copy-unicode -f all
 
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod SHIFT, left, movefocus, l
-bind = $mainMod SHIFT, right, movefocus, r
-bind = $mainMod SHIFT, up, movefocus, u
-bind = $mainMod SHIFT, down, movefocus, d
+bind = $mainMod ALT, left, movefocus, l
+bind = $mainMod ALT, right, movefocus, r
+bind = $mainMod ALT, up, movefocus, u
+bind = $mainMod ALT, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -62,13 +61,17 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
+# Move windows with mainMod + arrow keys
+bind = $mainMod SHIFT, right, movetoworkspace, e+1
+bind = $mainMod SHIFT, left, movetoworkspace, e-1
+
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, workspace, e+1
-bind = $mainMod, right, workspace, e-1
+bind = $mainMod, right, workspace, e+1
+bind = $mainMod, left, workspace, e-1
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_up, workspace, e+1
+bind = $mainMod, mouse_down, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
