--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -2,4 +2,5 @@
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # Monitor
-monitor=,preferred,auto,1
+monitor=DP-1,1920x1080@160,1920x0,1
+monitor=DP-3,1920x1080@160,0x0,1
