--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -14,6 +14,7 @@ windowrule = float, dialog
 windowrule = float, error
 windowrule = float, notification
 windowrule = float, confirmreset
+windowrule = float, gcolor3
 #windowrule = float, title:Open File
 #windowrule = float, title:branchdialog
 #windowrule = float, gpartedbin
