--- a/.config/qt5ct/colors/Artx.conf
+++ b/.config/qt5ct/colors/Artx.conf
@@ -1,10 +1,10 @@
 #               FG              BTN_BG bright less brdark        less da     txt fg               br text              btn fg           txt bg     bg     shadow   sel bg     sel fg     link       visited           alt bg default          tooltip bg  tooltip_fg
 [ColorScheme]
-  active_colors=#ffffff,          #181818, #181818, #181818, #181818, #181818, #ffffff,           #ffffff,           #ffffff,           #181818, #181818, #181818, #00ccff, #181818, #00ccff, #ffffff,            #181818, #ffffff,           181818,  #ffffff
-disabled_colors=#c5c5c5, #181818, #181818, #181818, #181818, #181818, #c5c5c5,  #c5c5c5,  #c5c5c5,  #181818, #181818, #181818, #00ccff, #181818, #00ccff, #c5c5c5,   #181818, #c5c5c5,  #181818, #c5c5c5
-inactive_colors=#ffffff,          #181818, #181818, #181818, #181818, #181818, #ffffff,           #ffffff,           #ffffff,           #181818, #181818, #181818, #00ccff, #181818, #00ccff, #ffffff,            #181818, #ffffff,           #181818, #ffffff
+  active_colors=#ffffff,          #181818, #181818, #181818, #181818, #181818, #ffffff,           #ffffff,           #ffffff,           #181818, #181818, #181818, #1793D1, #ffffff, #1793D1, #ffffff,            #181818, #ffffff,           181818,  #bfbfbf
+disabled_colors=#c5c5c5, #181818, #181818, #181818, #181818, #181818, #c5c5c5,  #c5c5c5,  #c5c5c5,  #181818, #181818, #181818, #1793D1, #ffffff, #1793D1, #c5c5c5,   #181818, #c5c5c5,  #181818, #959595
+inactive_colors=#ffffff,          #181818, #181818, #181818, #181818, #181818, #ffffff,           #ffffff,           #ffffff,           #181818, #181818, #181818, #1793D1, #ffffff, #1793D1, #ffffff,            #181818, #ffffff,           #181818, #bfbfbf
 
 #               FG              BTN_BG     bright   less br  dark     less da  txt fg               br text  btn fg     txt bg     bg     shadow   sel bg     sel fg     link       visite alt bg default  tooltip bg  tooltip_fg
-#  active_colors=#ffffff,          #181818, #181818, #cbc7c4, #9f9d9a, #b8b5b2, #ffffff,           #ff0000, #ffffff, #181818, #181818, #767472, #00ccff, #181818, #00ccff, #ffffff,            #181818, #ffffff,           181818, #ffffff
-#disabled_colors=#c5c5c5, #181818, #181818, #cbc7c4, #9f9d9a, #b8b5b2, #c5c5c5,  #ffec17, #ffffff, #181818, #181818, #767472, #00ccff, #181818, #00ccff, #c5c5c5,   #181818, #c5c5c5,  #181818, #c5c5c5
-#inactive_colors=#ffffff,          #181818, #181818, #cbc7c4, #9f9d9a, #b8b5b2, #ffffff,           #ff9040, #ffffff, #181818, #181818, #767472, #00ccff, #181818, #00ccff, #ffffff,            #181818, #ffffff,           #181818, #ffffff
+#  active_colors=#ffffff,          #181818, #181818, #cbc7c4, #9f9d9a, #b8b5b2, #ffffff,           #ff0000, #ffffff, #181818, #181818, #767472, #1793D1, #ffffff, #1793D1, #ffffff,            #181818, #ffffff,           181818, #bfbfbf
+#disabled_colors=#c5c5c5, #181818, #181818, #cbc7c4, #9f9d9a, #b8b5b2, #c5c5c5,  #ffec17, #ffffff, #181818, #181818, #767472, #1793D1, #ffffff, #1793D1, #c5c5c5,   #181818, #c5c5c5,  #181818, #959595
+#inactive_colors=#ffffff,          #181818, #181818, #cbc7c4, #9f9d9a, #b8b5b2, #ffffff,           #ff9040, #ffffff, #181818, #181818, #767472, #1793D1, #ffffff, #1793D1, #ffffff,            #181818, #ffffff,           #181818, #bfbfbf
