--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,16 +1,15 @@
 [Appearance]
-color_scheme_path=/home/xd/.config/qt5ct/colors/Artx.conf
+color_scheme_path=/home/potbush/.config/qt5ct/colors/Artx.conf
 custom_palette=true
-icon_theme=Eleven-Dark
-standard_dialogs=xdgdesktopportal
+standard_dialogs=default
 style=Fusion
 
 [Fonts]
-fixed="Noto Sans,12,-1,5,50,0,0,0,0,0"
-general="Noto Sans,12,-1,5,50,0,0,0,0,0"
+fixed="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
+general="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
 
 [Interface]
-activate_item_on_single_click=2
+activate_item_on_single_click=1
 buttonbox_layout=0
 cursor_flash_time=1000
 dialog_buttons_have_icons=1
@@ -25,7 +24,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\f\0\0\0\f\0\0\as\0\0\x4+\0\0\0\f\0\0\0\f\0\0\as\0\0\x4+\0\0\0\0\0\0\0\0\a\x80\0\0\0\f\0\0\0\f\0\0\as\0\0\x4+)
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\0\0\0\v,\0\0\x4\x2\0\0\a\x80\0\0\0\0\0\0\v?\0\0\x4\x1a\0\0\0\0\x2\0\0\0\a\x80\0\0\a\x80\0\0\0\0\0\0\v,\0\0\x4\x2)"
 
 [Troubleshooting]
 force_raster_widgets=1
