--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -76,3 +76,12 @@ bind = $mainMod, mouse_down, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Audio binding
+bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
+bind = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+# Brightness binding
+bind = , XF86MonBrightnessUp, exec, python3 ~/.config/hypr/script/brightness.py up
+bind = , XF86MonBrightnessUp, exec, python3 ~/.config/hypr/script/brightness.py down
