--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -2,9 +2,9 @@
     "layer": "top", // Waybar at top layer
     // "position": "bottom", // Waybar position (top|bottom|left|right)
     "height": 2, // Waybar height (to be removed for auto height)
-    "width": 1900, // Waybar width
+    //"width": 1900, // Waybar width
     //"spacing": 8, // Gaps between modules (4px)
-    "output": "DP-1", // to output for bar
+    //"output": "DP-1", // to output for bar
     // Choose the order of the modules
     
     "modules-left": ["hyprland/workspaces", "wlr/taskbar"],
@@ -28,15 +28,25 @@
     	"on-scroll-down": "hyprctl dispatch workspace r+1",
         "persistent-workspaces": {
             "*": [ 2,3,4,5 ] // 2-5 on every monitor
-            // "DP-3": [ 1 ], // workspace 1 shown on DP-3
-            // "DP-1": [ 2, 3 ], // workspaces 2 and 3 shown on DP-1
+            //"HDMI-A-1": [ 1 ]  but only workspace 1 on HDMI-A-1
         }
+    },
+
+    // Updates Count
+    "custom/updates": {
+        "format": "  {}",
+        "tooltip-format": "{}",
+        "escape": true,
+        "return-type": "json",       
+        "exec": "~/dotfiles/scripts/updates.sh",
+        "restart-interval": 60,
+        "on-click": "alacritty -e ~/dotfiles/scripts/installupdates.sh",
+        "tooltip": false
     },
 
 
     // taskbar
     "wlr/taskbar": {
-        "all-outputs": true,
         "format": "{icon}",
         "icon-size": 20,
         "icon-theme": "Eleven",
@@ -55,7 +65,6 @@
             "unlocked": ""
         }
     },
-
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
@@ -182,7 +191,7 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol-qt"
+        "on-click": "pavucontrol"
     },
     "custom/media": {
         "format": "{icon} {}",
@@ -191,9 +200,9 @@
         "format-icons": {
             "spotify": "",
             "default": "🎜"
-        }
-        //"escape": true,
-        //"exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
+        },
+        "escape": true,
+        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
         // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
     }
 }
