--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -16,11 +16,12 @@ bind = ALT, TAB, exec, $tab
 bind = $mainMod, L, exec, $swaylock-hyprland-screenshots
 bind = ,Print, exec, grim -g "$(slurp)" - | swappy -f - -o -
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f - -o -
+bind = CTRL SHIFT, R, exec, waybar
 
 # Lauchers
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, Return, exec, $terminal 
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, exec, $editor
 bind = $mainMod, J, exec, rofimoji -f all -a copy --selector-args="-theme ~/.config/rofi/emoj.rasi"
@@ -70,8 +71,8 @@ bind = $mainMod, right, workspace, e+1
 bind = $mainMod, left, workspace, e-1
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_up, workspace, e+1
-bind = $mainMod, mouse_down, workspace, e-1
+bind = $mainMod, mouse_up, exec, hyprctl dispatch workspace r+1
+bind = $mainMod, mouse_down, exec, hyprctl dispatch workspace r-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
