--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -26,7 +26,7 @@ windowrule = float, gcolor3
 #windowrule=animation slide,title:^(all_is_kitty)$
 #windowrule=float,title:^(all_is_kitty)$
 #windowrule=tile,xy
-#windowrule=tile,title:^(kitty)$
+windowrule=tile,title:^(kitty)$
 #windowrule=float,title:^(fly_is_kitty)$
 #windowrule=float,title:^(clock_is_kitty)$
 #windowrule=size 418 234,title:^(clock_is_kitty)$
@@ -40,10 +40,13 @@ windowrule = float, gcolor3
 #windowrulev2 = opacity 0.90 0.90,class:^(steam)$
 #windowrulev2 = opacity 0.90 0.90,class:^(steamwebhelper)$
 windowrulev2 = opacity 0.90 0.90,class:^(Spotify)$
+windowrulev2 = opacity 0.90 0.90,class:^(Console)$
 #windowrulev2 = opacity 0.90 0.90,class:^(Code)$
 #windowrulev2 = opacity 0.90 0.90,class:^(code-url-handler)$
 windowrulev2 = opacity 0.90 0.90,class:^(kitty)$
-#windowrulev2 = opacity 0.95 0.95,class:^(org.kde.dolphin)$
+windowrulev2 = tile ,class:^(kitty)$
+#windowrulev2 = title kitty,class:^(kitty)$
+windowrulev2 = opacity 0.95 0.95,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.90 0.90,class:^(org.kde.ark)$
 #windowrulev2 = opacity 0.90 0.90,class:^(nwg-look)$
 #windowrulev2 = opacity 0.90 0.90,class:^(qt5ct)$
